[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kani-ratelimits"
version = "1.0.1"
authors = [
    { name = "Andrew Zhu", email = "andrew@zhu.codes" },
]
description = "A wrapper engine to enforce request-based, token-based, and concurrency-based limits on kani engines."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "kani>=1.0.0rc0,<2.0.0",
    "aiolimiter>=1.0.0,<2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/zhudotexe/kani-ratelimits"
"Bug Tracker" = "https://github.com/zhudotexe/kani-ratelimits/issues"

# This tells the build system that the kani directory contains a namespace package
# Don't touch it unless you know what you're doing!
[tool.hatch.build.targets.wheel]
packages = ["kani"]
